--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,13 @@
   <link rel=StyleSheet href="stylesheets/scoreboard.css" type="text/css" />
 </head>
 <body>
-  <h1>Dice Rules</h1>
-  <!--
-  <canvas id="my-canvas" width="500" height="500"></canvas>
-  -->
+  <h1 id="page-header">Dice Rules</h1>
 
   <div id="game-area">
+
+  </div>
+
+  <div id="start-request">
 
   </div>
 
@@ -19,7 +20,6 @@
   <script src="scripts/player.js"></script>
   <script src="scripts/rules.js"></script>
   <script src="scripts/index.js"></script>
-  <script src="scripts/event-handler.js"></script>
 
 
   <p>The goal of the game is ...</p>
