Started Player Input Options
Allows for users to customize the number of players and input their own names

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
   <script src="scripts/player.js"></script>
   <script src="scripts/rules.js"></script>
   <script src="scripts/index.js"></script>
+  <script src="scripts/setup.js"></script>
 
 
   <p>The goal of the game is ...</p>
